# dualshock

./: CMakeLists.txt  Makefile  config.h.in  dualshock.c  dualshock.h  dualshockConfig.cmake.in  main.c
example/: Makefile  main.c
src/: dualshock.c
